# python-code-assessment

./: .gitignore  README.md  avg_med_prices.py  car_sales.py  mypy.ini  porsche_sales.py  pyproject.toml  pytest.ini  sales_ratio.py
tests/: test_avg_med_prices.py  test_porsche_sales.py  test_sales_ratio.py  test_top_10_sales_ratio.py
