[tool.poetry]
name = "python-kata-main"
version = "0.1.0"
description = "Technical Assessment Using Car Sales"
authors = ["cobriensr <charles.a.obrien@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
pandas = "^2.2.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
numpy = "^2.1.1"
black = "^24.8.0"
mypy = "^1.11.2"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
